# mars

./: Cargo.toml  README.md  TODO.md
src/: core.rs  error.rs  evaluate.rs  executor.rs  lib.rs  logger.rs  main.rs  parser.rs  types.rs  visualiser.rs  warrior.rs
src/core/: corebuilder.rs  mod.rs  test.rs
src/parser/: instruction.rs  line.rs  metadata.rs  mod.rs  numeric_expr.rs  opcode.rs  operation.rs
src/visual/: controller.rs  executor.rs  grid.rs  mod.rs  visualiser.rs
warriors/: TODO.md  armadillo.red  bad_dwarf.red  cannonade_stone.red  dwarf.red  imp.red  impgate.red  one_line_dwarf.red  stone.red  wait.red
