[package]
name = "mars"
version = "0.1.0"
authors = ["Daniel Rivas Perez <daniel.rivas@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
thiserror = "1.0.20"
rand = "0.7.3"
structopt = "0.3.17"
rayon = "1.4.0"
anyhow = "1.0.32"
indicatif = { version = "0.15.0", features = ["rayon"] }
crossbeam = "0.7.3"
tui = { version = "0.12", default-features = false, features = ['crossterm'] }
crossterm = "0.18.0"

